<resources>
    <string name="app_name">La Villa Soleil</string>
    <string name="entree">Entrées</string>
    <string name="main">Plats</string>
    <string name="dessert">Desserts</string>
    <string name="total">Total</string>
    <string name="basket_validation">Vos plats ont bien été ajoutés au panier</string>
    <string name="basket">Panier</string>
    <string name="quantity">Quantité :</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="enregistrer">S\'enregistrer</string>
    <string name="loguer">Se connecter</string>
    <string name="name">Nom</string>
    <string name="surname">Prenom</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="address">Adresse</string>
    <string name="login2">Ou se connecter ici</string>


</resources>